Fixes found during User/Group IT writing
Moved VoidResource to api, created DefaultVoidResource (used for empty post/put bodies)
Always PUT ALL resource properties (dirty properties)
Added save method that will take an 'href' (stop gap until each resource has an href property/ _link.self)
Added basic CRUD ITs for User and Group resources

--- a/pom.xml
+++ b/pom.xml
@@ -88,9 +88,9 @@
         <module>api</module>
         <module>impl</module>
         <module>httpclient</module>
+        <module>integration-tests</module>
         <module>examples</module>
         <module>coverage</module>
-
     </modules>
 
     <dependencyManagement>
