Add security question answer to RecoveryQuestionCredentials

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -9622,6 +9622,9 @@
     },
     "RecoveryQuestionCredential": {
       "properties": {
+        "answer": {
+          "type": "string"
+        },
         "question": {
           "type": "string"
         }
