Updating to standard okta.yaml format
okta.apiClient is now okta.client
and okta.apiClient.cacheManager is now okta.api.cache

--- a/impl/src/main/resources/com/okta/sdk/config/okta.yaml
+++ b/impl/src/main/resources/com/okta/sdk/config/okta.yaml
@@ -15,11 +15,11 @@
 #
 
 okta:
-  apiClient:
+  client:
     token:
     connectionTimeout: 30
     authenticationScheme: SSWS
-    cacheManager:
+    cache:
       enabled: true
       defaultTtl: 300
       defaultTti: 300
