adding x-okta-extensible to UserProfile
Fixed minor bug detected by IT

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -10474,6 +10474,7 @@
         }
       },
       "type": "object",
+      "x-okta-extensible": true,
       "x-okta-tags": [
         "User"
       ]
