--- a/pom.xml
+++ b/pom.xml
@@ -539,6 +539,38 @@
                         </plugins>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-pmd-plugin</artifactId>
+                    <version>3.8</version>
+                    <configuration>
+                        <rulesets>
+                            <ruleset>rulesets/java/basic.xml</ruleset>
+                            <ruleset>rulesets/java/empty.xml</ruleset>
+                            <ruleset>rulesets/java/imports.xml</ruleset>
+                            <ruleset>rulesets/java/unnecessary.xml</ruleset>
+                            <ruleset>rulesets/java/unusedcode.xml</ruleset>
+                            <ruleset>rulesets/java/sunsecure.xml</ruleset>
+                        </rulesets>
+                        <excludes>
+                            <!-- lang contains a few files copied from other projects -->
+                            <exclude>**/lang/*.java</exclude>
+                            <exclude>**/com/okta/sdk/impl/http/MediaType.java</exclude>
+                            <exclude>**/com/okta/sdk/impl/util/Base64.java</exclude>
+                            <exclude>**/com/okta/sdk/impl/util/BaseNCodec.java</exclude>
+                            <exclude>**/LinkedCaseInsensitiveMap</exclude>
+                            <exclude>**/com/okta/sdk/impl/util/MimeType.java</exclude>
+                            <!-- generated resources -->
+                            <exclude>**/com/okta/sdk/resource/*.java</exclude>
+                            <exclude>**/com/okta/sdk/client/Client.java</exclude>
+                            <exclude>**/com/okta/sdk/impl/resource/Default*.java</exclude>
+                            <exclude>**/com/okta/sdk/impl/client/DefaultClient.java</exclude>
+
+                            <!-- caching needs a little work -->
+                            <exclude>**/com/okta/sdk/impl/ds/cache/WriteCacheFilter.java</exclude>
+                        </excludes>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -562,6 +594,19 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>findbugs-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>scan</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>check</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-pmd-plugin</artifactId>
                         <executions>
                             <execution>
                                 <id>scan</id>
