--- a/examples/quickstart/pom.xml
+++ b/examples/quickstart/pom.xml
@@ -36,6 +36,7 @@
         <dependency>
             <groupId>com.okta.sdk</groupId>
             <artifactId>okta-sdk-impl</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.okta.sdk</groupId>
