--- a/pom.xml
+++ b/pom.xml
@@ -666,5 +666,46 @@
                 </plugins>
             </reporting>
         </profile>
+        <profile>
+            <id>pub-docs</id>
+            <properties>
+                <javadoc.version.dir>development/</javadoc.version.dir>
+                <gh-pages.dir>${project.build.directory}/gh-pages</gh-pages.dir>
+                <javadoc.output.dir>${gh-pages.dir}/${javadoc.version.dir}apidocs</javadoc.output.dir>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <configuration>
+                            <excludePackageNames>
+                                *com.okta.sdk.impl.*:
+                                *com.okta.swagger.*:
+                                *.examples:
+                                *.tutorial.*:
+                                *quickstart
+                            </excludePackageNames>
+                            <outputDirectory>${javadoc.output.dir}</outputDirectory>
+                            <reportOutputDirectory>${javadoc.output.dir}</reportOutputDirectory>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-scm-publish-plugin</artifactId>
+                        <version>1.1</version>
+                        <inherited>false</inherited>
+                        <configuration>
+                            <checkinComment>Publishing javadoc for ${project.artifactId}:${project.version}</checkinComment>
+                            <content>${gh-pages.dir}</content>
+                            <skipDeletedFiles>true</skipDeletedFiles>
+                            <pubScmUrl>scm:git:git@github.com:okta/okta-sdk-java.git</pubScmUrl>
+                            <scmBranch>gh-pages</scmBranch> <!-- branch with static site -->
+                            <checkoutDirectory>${project.build.directory}/scmpublish-checkout-javadoc</checkoutDirectory>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 </project>
