Added google analytics to javadoc

--- a/pom.xml
+++ b/pom.xml
@@ -679,6 +679,17 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <configuration>
+                            <top><![CDATA[
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-15777010-3', 'auto');
+      ga('send', 'pageview');
+    </script>
+                                ]]></top>
+                            <additionalparam>--allow-script-in-comments</additionalparam>
                             <excludePackageNames>
                                 *com.okta.sdk.impl.*:
                                 *com.okta.swagger.*:
