--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,4 @@ env:
   - secure: aKNtKWppQ0yaRh1CmOtgauf1KXnKt5neva/VZll0XfbuHcNkHfTIq0zZuUL5bF3CTVHxrwW1akDrIdho2wb0UOEKFVCISHzusp8Wlm3nq8mEls46cpYu+atfp7O+d8ter49eLAQucKaR64YLsl0j+CZ2zmm6vPTN5Fb2xgvfCnc=
   - secure: AigJxakzJmNGHQ/CSnUrYOLnqHMYxzGI9qElAoVzMyRGcbtAgYKR++QyfOuA6af7zHZPFG6qhb2ONClKOCP8+VN2zyhYUhNRX1/0y7zh2k950YDTxsm6RKeB9tzYHeG6rfeQdMJFcBNUpCV2B/tNYl8CDvtOlPGpG6niB0Dau3k=
   - secure: dXvAOtP/jEDTnzqrFpHWeaMGWzbkBUTjxHqnkJSrDEfk6/HEq3VIWPA1R8+FMdzrXh7uPyXZVsVWqkBIaag8JAhD8qAS9B7+sTlmR9bmxBxIOv9exG/esLaxhiIcqHK/tBHicz5nl7IjhOZaWHfHV6C65ye1JFC4dvexyWrkXNg=
+  - secure: OLG+6OCTsxAr1ZWrDrFAT07WDZ98hBu833mfD9xYF5j0ytl+jw29/lmaFfcJpUtsATurBiG7WpmbkaeMWSaLivnUm5SpjVCqdYUwhdXhr6KfLibgzPk8Po22uVnAaz6jmn9KTBp9MdtgT5OvrWNCKsmnEjbgrJhkOzyBeRIK2Qg=
