Use github api key for gh-pages deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,4 @@ env:
   - secure: AigJxakzJmNGHQ/CSnUrYOLnqHMYxzGI9qElAoVzMyRGcbtAgYKR++QyfOuA6af7zHZPFG6qhb2ONClKOCP8+VN2zyhYUhNRX1/0y7zh2k950YDTxsm6RKeB9tzYHeG6rfeQdMJFcBNUpCV2B/tNYl8CDvtOlPGpG6niB0Dau3k=
   - secure: dXvAOtP/jEDTnzqrFpHWeaMGWzbkBUTjxHqnkJSrDEfk6/HEq3VIWPA1R8+FMdzrXh7uPyXZVsVWqkBIaag8JAhD8qAS9B7+sTlmR9bmxBxIOv9exG/esLaxhiIcqHK/tBHicz5nl7IjhOZaWHfHV6C65ye1JFC4dvexyWrkXNg=
   - secure: OLG+6OCTsxAr1ZWrDrFAT07WDZ98hBu833mfD9xYF5j0ytl+jw29/lmaFfcJpUtsATurBiG7WpmbkaeMWSaLivnUm5SpjVCqdYUwhdXhr6KfLibgzPk8Po22uVnAaz6jmn9KTBp9MdtgT5OvrWNCKsmnEjbgrJhkOzyBeRIK2Qg=
+  - secure: qK66GF3UNfGJcgh3UcGXTjc1Y7fFYJIJ+jBTt8YuT2mWkzAINoyQg5hoJj2XqWK7GHvQNCzBqf8iujfUd3Q5Tx2/cs76HCJBwh6K9hKcwonPnk3sMJp5AWT8sMgwAvbT4yXbWwfkOvIApXYRjb+vPA6XrwR0EqX3nesdU2PeEUM=
