--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.okta.sdk</groupId>
     <artifactId>okta-sdk-root</artifactId>
-    <version>0.5.0</version>
+    <version>0.5.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Okta Java SDK</name>
@@ -83,7 +83,7 @@
         <connection>scm:git:git://github.com/okta/oktasdk-java.git</connection>
         <developerConnection>scm:git:ssh://github.com:okta/oktasdk-java.git</developerConnection>
         <url>http://github.com/okta/oktasdk-java/tree/master</url>
-      <tag>okta-sdk-root-0.5.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <modules>
@@ -103,29 +103,29 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-api</artifactId>
-                <version>0.5.0</version>
+                <version>0.5.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-impl</artifactId>
-                <version>0.5.0</version>
+                <version>0.5.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-api-swagger-templates</artifactId>
-                <version>0.5.0</version>
+                <version>0.5.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-httpclient</artifactId>
-                <version>0.5.0</version>
+                <version>0.5.1-SNAPSHOT</version>
             </dependency>
 
             <!-- Examples -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-examples-quickstart</artifactId>
-                <version>0.5.0</version>
+                <version>0.5.1-SNAPSHOT</version>
             </dependency>
 
             <!-- Logging -->
@@ -506,7 +506,7 @@
                         <dependency>
                             <groupId>com.okta.sdk</groupId>
                             <artifactId>okta-api-swagger-templates</artifactId>
-                            <version>0.5.0</version>
+                            <version>0.5.1-SNAPSHOT</version>
                         </dependency>
                     </dependencies>
                 </plugin>
